--- a/src/components/style/about.scss
+++ b/src/components/style/about.scss
@@ -3,7 +3,7 @@
 .main{
     width: 100%;
     height: 100vh;
-    @include dfc(start,start);
+    @include dfc(flex-start,flex-start);
     padding: 100px 180px;
     h1{
         font-size: 40px;
@@ -19,7 +19,7 @@
             box-shadow: 0 4px 30px rgba(128, 128, 128, 0.37);
             border-radius: 10px;
             padding: 45px 30px;
-            @include dfc(start,start);
+            @include dfc(flex-start,flex-start);
             h1{
                 font-size: 22px;
                 font-weight: 450;
@@ -233,7 +233,7 @@
                 border-radius: 10px;
                 padding: 45px 30px;
                 margin-top: 10px;
-                @include dfc(start,start);
+                @include dfc(flex-start,flex-start);
                 h1{
                     font-size: 22px;
                     font-weight: 450;
@@ -251,7 +251,7 @@
                 }
                 &:nth-of-type(2){
                     h1{
-                        text-align: start;
+                        text-align: flex-start;
                     }
                 }
             }
